Fix invisible class

--- a/src/Resources/public/framework/scss/basics/_contao.scss
+++ b/src/Resources/public/framework/scss/basics/_contao.scss
@@ -19,7 +19,7 @@
   height:1px;
   margin:-1px;
   overflow:hidden;
-  padding:0;
+  padding:0 !important;
   position:absolute;
   width:1px;
 }
